[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["onerandomusername <me@arielle.codes>"]
description = "An API to provide information for python packages and modules."
license = "MIT"
name = "sage"
packages = [
  {include = "sage", from = "src"},
]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
alembic = "^1.8.1"
asyncpg = "^0.27.0"
celery = "^5.2.7"
fastapi = "^0.87.0"
python = "^3.10"
sqlalchemy = {extras = ["postgresql-asyncpg"], version = "^1.4.43"}
uvicorn = {extras = ["standard"], version = "^0.19.0"}

[tool.poetry.group.dev.dependencies]
black = "==22.8"
flake8 = "~=5.0"
flake8-annotations = "~=2.9.1"
flake8-bugbear = "~=22.9.11"
flake8-docstrings = "~=1.6"
flake8-isort = "^4.2.0"
flake8-string-format = "~=0.3"
flake8-tidy-imports = "~=4.1"
flake8-todo = "~=0.7"
isort = "^5.10.1"
pre-commit = "~=2.20.0"
pyright = "==1.1.278"
python-dotenv = "~=0.21.0"
taskipy = "~=1.10.3"

# [tool.poetry.scripts]
# my_package_cli = "sage.__main__:run"

[tool.black]
include = '\.pyi?$'
line-length = 100
target-version = ["py310"]

[tool.taskipy.tasks]
export = "poetry export --without-hashes -o requirements.txt"
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
start = "python -m sage"

[tool.isort]
atomic = true
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 100
lines_after_imports = 2
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.pyright]
include = [
  "src/sage",
  "*.py",
]
strictParameterNoneValue = false
typeCheckingMode = "basic"
